--- a/app/base/templates/accounts/register.html
+++ b/app/base/templates/accounts/register.html
@@ -55,7 +55,14 @@
                   </div>
                 </div>
               </div>
-              
+              <div class="row">
+                <div class="col-md-3 px-md-1">
+                  <div class="form-group">
+                    <label>Password</label>
+                    {{ form.key(class="form-control", type="password") }}
+                  </div>
+                </div>
+              </div>
           </div>
           <div class="card-footer">
             <button type="submit" name="register" class="btn btn-fill btn-primary">Register</button>
